--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ pyxdg = "^0.28"
 
 [tool.poetry.dev-dependencies]
 pytest-runner = "^6.0.0"
+pytest = "^7.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
